Fix for high contrast mode for grid from Ben Shell.  fixes #5365 \!strict
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@12554 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/_grid/Grid.css
+++ b/grid/_grid/Grid.css
@@ -243,3 +243,14 @@
 	top: -1000px;
 	height: 0px, width: 0px;
 }
+
+.gridArrowButtonChar {
+	display:none !important;
+}
+.dijit_a11y .gridArrowButtonChar {
+	display:inline !important;
+}
+.dijit_a11y .dojoxGrid-sort-down, .dijit_a11y .dojoxGrid-sort-up {
+	margin-left: 0;
+	padding-left: 0;
+}
